using System.Collections;
using System.Collections.Generic;
using UnityEngine;
//NavMeshAgentï¿½gï¿½ï¿½ï¿½Æ‚ï¿½ï¿½É•Kï¿½v
using UnityEngine.AI;

//ï¿½Iï¿½uï¿½Wï¿½Fï¿½Nï¿½gï¿½ï¿½NavMeshAgentï¿½Rï¿½ï¿½ï¿½|ï¿½[ï¿½lï¿½ï¿½ï¿½gï¿½ï¿½İ’u
[RequireComponent(typeof(NavMeshAgent))]

public class arbinoPatrol : MonoBehaviour
{
    public GameObject bikkuri; 
    public Transform[] points;
    [SerializeField] int destPoint = 0;
    private NavMeshAgent agent;
    Animator anim;
    public float BikkuriCooltime=3;
    public float attackcooltime=3;
    private float timeforcool;
    private float timeforatackcool;
    //public bool attackwait=true;
    private float timeforsound;
    public float soundtrakingtime=10f;
    public float sound=0;
    Vector3 playerPos;
    Vector3 pastplayerpos;
    GameObject player;
    float distance;
    [SerializeField] float trackingRange = 3f;
    [SerializeField] float quitRange = 5f;
    [SerializeField] float atackRange = 3f;
    public float _sightAngle = 30f;
    [SerializeField] bool tracking = false;

    void Start()
    {
        anim = GetComponent<Animator>();
        agent = GetComponent<NavMeshAgent>();

        // autoBraking ï¿½ğ–³Œï¿½ï¿½É‚ï¿½ï¿½ï¿½ÆAï¿½Ú•Wï¿½nï¿½_ï¿½ÌŠÔ‚ï¿½ï¿½pï¿½ï¿½ï¿½Iï¿½ÉˆÚ“ï¿½ï¿½ï¿½ï¿½Ü‚ï¿½
        //(ï¿½Â‚Ü‚ï¿½Aï¿½Gï¿½[ï¿½Wï¿½Fï¿½ï¿½ï¿½gï¿½Í–Ú•Wï¿½nï¿½_ï¿½É‹ß‚Ã‚ï¿½ï¿½Ä‚ï¿½
        // ï¿½ï¿½ï¿½xï¿½ï¿½ï¿½ï¿½ï¿½Æ‚ï¿½ï¿½Ü‚ï¿½ï¿½ï¿½)
        agent.autoBraking = false;

        GotoNextPoint();

        //ï¿½ÇÕ‚ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Iï¿½uï¿½Wï¿½Fï¿½Nï¿½gï¿½Ì–ï¿½ï¿½Oï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
        player = GameObject.Find("Player");
        timeforcool=BikkuriCooltime;
        timeforsound=soundtrakingtime;
        timeforatackcool=attackcooltime;
    }


    void GotoNextPoint()
    {
        // ï¿½nï¿½_ï¿½ï¿½ï¿½È‚É‚ï¿½ï¿½İ’è‚³ï¿½ï¿½Ä‚ï¿½ï¿½È‚ï¿½ï¿½Æ‚ï¿½ï¿½É•Ô‚ï¿½ï¿½Ü‚ï¿½
        if(points.Length==0){
            anim.SetBool("move", false);
            //agent.destination = new Vector3(transform.position.x+Random.Range(-1f, 1f),transform.position.y,transform.position.z+Random.Range (-1f,1f));
            return;
        }
        anim.SetBool("move", true);

        // ï¿½Gï¿½[ï¿½Wï¿½Fï¿½ï¿½ï¿½gï¿½ï¿½ï¿½ï¿½ï¿½İİ’è‚³ï¿½ê‚½ï¿½Ú•Wï¿½nï¿½_ï¿½Ésï¿½ï¿½ï¿½æ‚¤ï¿½Éİ’è‚µï¿½Ü‚ï¿½
        agent.destination = points[destPoint].position;

        // ï¿½zï¿½ï¿½ï¿½ï¿½Ìï¿½ï¿½ÌˆÊ’uï¿½ï¿½Ú•Wï¿½nï¿½_ï¿½Éİ’è‚µï¿½A
        // ï¿½Kï¿½vï¿½È‚ï¿½Îoï¿½ï¿½ï¿½nï¿½_ï¿½É‚ï¿½ï¿½Ç‚ï¿½Ü‚ï¿½
        destPoint = (destPoint + 1) % points.Length;
    }


    void Update()
    {
        if(anim.GetBool("Z_Die")){
            agent.destination=transform.position;
            return;
        }
        if(timeforatackcool<attackcooltime){
            timeforatackcool+=Time.deltaTime;
            agent.destination=transform.position;
            transform.LookAt(new Vector3(player.transform.position.x,transform.position.y,player.transform.position.z));
            anim.SetBool("move", false);
            return;
        }
        //attackwait=true;
        playerPos = player.transform.position;
        distance = Vector3.Distance(this.transform.position, playerPos);
        timeforcool+=Time.deltaTime;
        timeforsound+=Time.deltaTime;
        if(distance>30)return;
        bool sightjudge=IsVisible();
        //Playerï¿½Æ‚ï¿½ï¿½ÌƒIï¿½uï¿½Wï¿½Fï¿½Nï¿½gï¿½Ì‹ï¿½ï¿½ï¿½ï¿½ğ‘ª‚ï¿½

        if (tracking)
        {
            pastplayerpos=playerPos;
            //ï¿½ÇÕ‚Ìï¿½ï¿½AquitRangeï¿½ï¿½è‹—ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ê‚½ï¿½ç’†ï¿½~
            if (distance > quitRange&&!sightjudge)
            {
                tracking = false;
            }
            if (distance < atackRange)
            {
                anim.SetTrigger("Z_atack");
                timeforatackcool=0f;
                //attackwait=false;
            }
            //Playerï¿½ï¿½Ú•Wï¿½Æ‚ï¿½ï¿½ï¿½
            if (agent != null && agent.isActiveAndEnabled && agent.isOnNavMesh) {
            agent.destination = playerPos;
            anim.SetBool("move", true);
            }
        }
        else if(timeforsound<soundtrakingtime&&Vector3.Distance(this.transform.position, pastplayerpos)<0.1) {
            if(sound==0){
                //Playerï¿½ï¿½trackingRangeï¿½ï¿½ï¿½ß‚Ã‚ï¿½ï¿½ï¿½ï¿½ï¿½ÇÕŠJï¿½n
                if (distance < trackingRange){
                    tracking = true;
                    Summonbikkuri();
                }
                if(sightjudge){
                    tracking = true;
                    Summonbikkuri();
                }
            }else{
                if (distance < sound||distance < trackingRange){
                    tracking = true;
                    Summonbikkuri();
                }
                if(sightjudge){
                    tracking = true;
                    Summonbikkuri();
                }
            }

            if (agent != null && agent.isActiveAndEnabled && agent.isOnNavMesh) {
            agent.destination = pastplayerpos;
            anim.SetBool("move", true);
            }
        }
        else
        {
            if(sound==0){
                //Playerï¿½ï¿½trackingRangeï¿½ï¿½ï¿½ß‚Ã‚ï¿½ï¿½ï¿½ï¿½ï¿½ÇÕŠJï¿½n
                if (distance < trackingRange){
                    tracking = true;
                    Summonbikkuri();
                }
                if(sightjudge){
                    tracking = true;
                    Summonbikkuri();
                }
            }else{
                if (distance < sound||distance < trackingRange){
                    tracking = true;
                    timeforsound=0f;
                    Summonbikkuri();
                }
                if(sightjudge){
                    tracking = true;
                    Summonbikkuri();
                }
            }


            // ï¿½Gï¿½[ï¿½Wï¿½Fï¿½ï¿½ï¿½gï¿½ï¿½ï¿½ï¿½ï¿½Ú•Wï¿½nï¿½_ï¿½É‹ß‚Ã‚ï¿½ï¿½Ä‚ï¿½ï¿½ï¿½ï¿½ï¿½A
            // ï¿½ï¿½ï¿½Ì–Ú•Wï¿½nï¿½_ï¿½ï¿½Iï¿½ï¿½ï¿½ï¿½ï¿½Ü‚ï¿½
            if (!agent.pathPending && agent.remainingDistance < 0.5f)
                GotoNextPoint();
            //Debug.Log(agent.velocity.magnitude);
        }
        sound=0;
    }
    public bool IsVisible()
    {
        // è‡ªèº«ã®ä½ç½®
        var selfPos = this.transform.position;
        // ã‚¿ãƒ¼ã‚²ãƒƒãƒˆã®ä½ç½®
        var targetPos = player.transform.position;

        // è‡ªèº«ã®å‘ãï¼ˆæ­£è¦åŒ–ã•ã‚ŒãŸãƒ™ã‚¯ãƒˆãƒ«ï¼‰
        var selfDir = this.transform.forward;
        
        // ã‚¿ãƒ¼ã‚²ãƒƒãƒˆã¾ã§ã®å‘ãã¨è·é›¢è¨ˆç®—
        var targetDir = targetPos - selfPos;
        var targetDistance = targetDir.magnitude;

        // cos(Î¸/2)ã‚’è¨ˆç®—
        var cosHalf = Mathf.Cos(_sightAngle / 2 * Mathf.Deg2Rad);

        // è‡ªèº«ã¨ã‚¿ãƒ¼ã‚²ãƒƒãƒˆã¸ã®å‘ãã®å†…ç©è¨ˆç®—
        // ã‚¿ãƒ¼ã‚²ãƒƒãƒˆã¸ã®å‘ããƒ™ã‚¯ãƒˆãƒ«ã‚’æ­£è¦åŒ–ã™ã‚‹å¿…è¦ãŒã‚ã‚‹ã“ã¨ã«æ³¨æ„
        var innerProduct = Vector3.Dot(selfDir, targetDir.normalized);

        // è¦–ç•Œåˆ¤å®š
        return innerProduct > cosHalf && targetDistance < trackingRange*2;
    }

    void OnDrawGizmosSelected()
    {
        //trackingRangeï¿½Ì”ÍˆÍ‚ï¿½Ô‚ï¿½ï¿½ï¿½ï¿½Cï¿½ï¿½ï¿½[ï¿½tï¿½ï¿½ï¿½[ï¿½ï¿½ï¿½Åï¿½ï¿½ï¿½
        Gizmos.color = Color.red;
        Gizmos.DrawWireSphere(transform.position, trackingRange);

        //quitRangeï¿½Ì”ÍˆÍ‚ï¿½Â‚ï¿½ï¿½ï¿½ï¿½Cï¿½ï¿½ï¿½[ï¿½tï¿½ï¿½ï¿½[ï¿½ï¿½ï¿½Åï¿½ï¿½ï¿½
        Gizmos.color = Color.blue;
        Gizmos.DrawWireSphere(transform.position, quitRange);

        Gizmos.color = Color.green;
        Gizmos.DrawWireSphere(transform.position, atackRange);
    }
    void Summonbikkuri(){
        if(timeforcool<BikkuriCooltime)return;
        // Cubeãƒ—ãƒ¬ãƒãƒ–ã‚’å…ƒã«ã€ã‚¤ãƒ³ã‚¹ã‚¿ãƒ³ã‚¹ã‚’ç”Ÿæˆ
        Instantiate (bikkuri, new Vector3(this.transform.position.x,this.transform.position.y+0.2f,this.transform.position.z), Quaternion.identity);
        timeforcool=0f;
    }
}